name:                curved
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Read and write Whisper (Graphite's file format) files.
description:
  Read and write Whisper (Graphite's file format) files.
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.be
build-type:          Simple

library
  build-depends:       base == 4.*,
                       bytestring-mmap,
                       storable-endian,
                       unix
  exposed-modules:     Data.Whisper
  ghc-options:         -Wall

executable curved
  main-is:             curved.hs
  hs-source-dirs:      bin/
  build-depends:       base == 4.*,
                       cmdargs == 0.9.*,
                       curved
  ghc-options:         -Wall
