name:                curved
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Read and write Whisper (Graphite's file format) files.
description:
  Read and write Whisper (Graphite's file format) files.
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.be
build-type:          Simple

library
  build-depends:       base == 4.*,
                       bytestring == 0.9.*,
                       snap == 0.9.*,
                       snap-blaze == 0.2.*,
                       snap-core == 0.9.*,
                       snap-server == 0.9.*,
                       storable-endian,
                       time,
                       unix
  exposed-modules:     Curved.Httpd,
                       Data.Whisper
  build-tools:         c2hs >= 0.15
  ghc-options:         -Wall

executable curved
  main-is:             curved.hs
  hs-source-dirs:      bin/
  build-depends:       base == 4.*,
                       cmdargs == 0.9.*,
                       curved
  ghc-options:         -Wall
