name:                curved
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Read and write Whisper (Graphite's file format) files.
description:
  Read and write Whisper (Graphite's file format) files.
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.be
build-type:          Simple

library
  build-depends:       attoparsec == 0.10.*,
                       base == 4.*,
                       bytestring == 0.9.*,
                       cereal == 0.3.*,
                       containers == 0.4.*,
                       directory == 1.1.*,
                       filepath == 1.3.*,
                       network == 2.3.*,
                       snap == 0.9.*,
                       snap-blaze == 0.2.*,
                       snap-core == 0.9.*,
                       snap-server == 0.9.*,
                       storable-endian,
                       time,
                       unix
  exposed-modules:     Curved.Carbon,
                       Curved.Httpd,
                       Data.Pickle,
                       Data.Whisper
  build-tools:         c2hs >= 0.15
  ghc-options:         -Wall

executable curved
  main-is:             curved.hs
  hs-source-dirs:      bin/
  build-depends:       base == 4.*,
                       cmdargs == 0.9.*,
                       curved,
                       time
  ghc-options:         -Wall
